fix visiblity in css

--- a/react-app/src/components/Post/EachPost/EachPost.css
+++ b/react-app/src/components/Post/EachPost/EachPost.css
@@ -85,6 +85,7 @@
 .single-post-bottom {
     border-top: 1px solid lightgray;
     height: 0;
+    visibility: hidden;
 }
 
 .single-post-bottom-clicked {
